First dozor version ok. Seems to work with interceptor-utils. There is an error at start of plotting that needs to be tracked eventually

--- a/src/interceptor/resources/connector/beamlines.cfg
+++ b/src/interceptor/resources/connector/beamlines.cfg
@@ -37,3 +37,11 @@ filepath_key = master_file
 run_mode_key = mapping
 run_mode_key_index = 0
 
+[dozor]
+beamline = dozor
+host = localhost
+port = 5557
+custom_keys = mapping, master_file
+filepath_key = master_file
+run_mode_key = mapping
+run_mode_key_index = 0
