Modified the connection menu to automatically pick correct GUI port and host. Need to further find a way to automatically pick up the IP of a running pipeline. To be continued.

--- a/src/interceptor/resources/connector/beamlines.cfg
+++ b/src/interceptor/resources/connector/beamlines.cfg
@@ -19,28 +19,30 @@ output_format = series, frame, result {}, mapping {}, filename
 output_prefix_key = reporting
 default_output_prefix = RESULTS:
 
+
+[jungfrau]
+beamline = jungfrau
+host = 172.18.10.80
+port = 40587
+custom_keys = mapping, master_file
+filepath_key = master_file
+run_mode_key = mapping
+run_mode_key_index = 0
+
+
+[localhost]
+beamline = localhost
+host = 127.0.0.1
+port = 5557
+custom_keys = mapping, master_file
+filepath_key = master_file
+run_mode_key = mapping
+run_mode_key_index = 0
+
 [test]
 beamline = test
 host = localhost
 port = 9999
-custom_keys = mapping, master_file
-filepath_key = master_file
-run_mode_key = mapping
-run_mode_key_index = 0
-
-[test2]
-beamline = test2
-host = localhost
-port = 9999
-custom_keys = mapping, master_file
-filepath_key = master_file
-run_mode_key = mapping
-run_mode_key_index = 0
-
-[dozor]
-beamline = dozor
-host = localhost
-port = 5557
 custom_keys = mapping, master_file
 filepath_key = master_file
 run_mode_key = mapping
