Various updates for Biomax experiment. Needs some cleaning.

--- a/src/interceptor/resources/connector/beamlines.cfg
+++ b/src/interceptor/resources/connector/beamlines.cfg
@@ -39,10 +39,10 @@ filepath_key = master_file
 run_mode_key = mapping
 run_mode_key_index = 0
 
-[test]
-beamline = test
-host = localhost
-port = 9999
+[hve]
+beamline = hve
+host = fe0
+port = 99999
 custom_keys = mapping, master_file
 filepath_key = master_file
 run_mode_key = mapping
