Added support to threshold and calculate hit rade on either quality metrics or resolution. Choose to connect to the (resolution) or (quality) beamline to pick. The simulator code has some minor changes

--- a/src/interceptor/resources/connector/beamlines.cfg
+++ b/src/interceptor/resources/connector/beamlines.cfg
@@ -28,7 +28,7 @@ custom_keys = mapping, master_file
 filepath_key = master_file
 run_mode_key = mapping
 run_mode_key_index = 0
-
+use_resolution_threshold = False
 
 [localhost]
 beamline = localhost
@@ -38,12 +38,16 @@ custom_keys = mapping, master_file
 filepath_key = master_file
 run_mode_key = mapping
 run_mode_key_index = 0
+use_resolution_threshold = True
 
-[hve]
+[hve (quality)]
 beamline = hve
 host = fe0
 port = 99999
-custom_keys = mapping, master_file
-filepath_key = master_file
-run_mode_key = mapping
-run_mode_key_index = 0
+use_resolution_threshold = False
+
+[hve (resolution)]
+beamline = hve
+host = fe0
+port = 99999
+use_resolution_threshold = True
