Changing default hve connection node to b-biomax-eiger-dc-1

--- a/src/interceptor/resources/connector/beamlines.cfg
+++ b/src/interceptor/resources/connector/beamlines.cfg
@@ -34,12 +34,12 @@ use_resolution_threshold = True
 
 [hve (quality)]
 beamline = hve
-host = fe0
+host = 172.18.20.10
 port = 99999
 use_resolution_threshold = False
 
 [hve (resolution)]
 beamline = hve
-host = fe0
+host = 172.18.20.10
 port = 99999
 use_resolution_threshold = True
