--- a/src/interceptor/resources/connector/beamlines.cfg
+++ b/src/interceptor/resources/connector/beamlines.cfg
@@ -20,12 +20,6 @@ output_prefix_key = reporting
 default_output_prefix = RESULTS:
 
 
-[jungfrau]
-beamline = jungfrau
-host = 172.18.1.65
-port = 40587
-use_resolution_threshold = False
-
 [localhost]
 beamline = localhost
 host = 127.0.0.1
@@ -41,5 +35,17 @@ use_resolution_threshold = False
 [hve (resolution)]
 beamline = hve
 host = 172.18.20.10
+port = 99999
+use_resolution_threshold = True
+
+[cc hve (quality)]
+beamline = hve
+host = 172.16.118.46
+port = 99999
+use_resolution_threshold = False
+
+[cc hve (resolution)]
+beamline = hve
+host = 172.16.118.46
 port = 99999
 use_resolution_threshold = True
