Changed connection labels to better clarify options on blue or purple network

--- a/src/interceptor/resources/connector/beamlines.cfg
+++ b/src/interceptor/resources/connector/beamlines.cfg
@@ -26,25 +26,25 @@ host = 127.0.0.1
 port = 5557
 use_resolution_threshold = True
 
-[hve (quality)]
+[hve on blue (quality)]
 beamline = hve
 host = 172.18.20.10
 port = 99999
 use_resolution_threshold = False
 
-[hve (resolution)]
+[hve on blue (resolution)]
 beamline = hve
 host = 172.18.20.10
 port = 99999
 use_resolution_threshold = True
 
-[cc hve (quality)]
+[hve on purple (quality)]
 beamline = hve
 host = 172.16.118.46
 port = 99999
 use_resolution_threshold = False
 
-[cc hve (resolution)]
+[hve on purple (resolution)]
 beamline = hve
 host = 172.16.118.46
 port = 99999
