--- a/src/interceptor/resources/connector/beamlines.cfg
+++ b/src/interceptor/resources/connector/beamlines.cfg
@@ -26,11 +26,13 @@ host = 127.0.0.1
 port = 9997
 use_resolution_threshold = True
 
+
 [hve on blue (quality)]
 beamline = hve
 host = 172.18.20.10
 port = 99999
 use_resolution_threshold = False
+
 
 [hve on blue (resolution)]
 beamline = hve
@@ -38,11 +40,13 @@ host = 172.18.20.10
 port = 99999
 use_resolution_threshold = True
 
-[hve on purple (quality)]
+
+[localhost autoconnect]
 beamline = hve
 host = 172.16.118.46
 port = 99999
 use_resolution_threshold = False
+json_input_params = /home/aleceh/Programs/mx_suite/src/mx/online/mpi_example_pipelines/mockup_system/mockup_config.dat
 
 [hve on purple (resolution)]
 beamline = hve
