Pipeline config file has changed.

--- a/src/interceptor/resources/connector/beamlines.cfg
+++ b/src/interceptor/resources/connector/beamlines.cfg
@@ -45,8 +45,8 @@ use_resolution_threshold = True
 beamline = hve
 host = 172.16.118.46
 port = 99999
-use_resolution_threshold = False
-json_input_params = /home/aleceh/Programs/mx_suite/src/mx/online/mpi_example_pipelines/mockup_system/mockup_config.dat
+use_resolution_threshold = True
+json_input_params = /home/aleceh/Programs/mx_suite/src/mx/online/mpi_example_pipelines/mockup_system/pipeline_config.dat
 
 [hve on purple (resolution)]
 beamline = hve
