Minor changes, changed parameter settings. Port 9997 collides with the pipelines, so it's better to revert to 5557. The simulator frame rate has been decreased so that it does not choke the VM.

--- a/src/interceptor/resources/connector/beamlines.cfg
+++ b/src/interceptor/resources/connector/beamlines.cfg
@@ -46,7 +46,7 @@ beamline = hve
 host = 172.16.118.46
 port = 99999
 use_resolution_threshold = True
-json_input_params = /home/aleceh/Programs/mx_suite/src/mx/online/mpi_example_pipelines/mockup_system/pipeline_config.dat
+json_input_params = /home/aleceh/Programs/mx_suite/src/mx/online/biomax_hve_mpi_pipeline/eigerStream_dozor/collector_output/collector_conf.json
 
 [hve on purple (resolution)]
 beamline = hve
