Adding local shortcuts to pipeline or collector network configuration files in a standard ~/Workspace location.

--- a/src/interceptor/resources/connector/beamlines.cfg
+++ b/src/interceptor/resources/connector/beamlines.cfg
@@ -41,12 +41,20 @@ port = 99999
 use_resolution_threshold = True
 
 
-[localhost autoconnect]
+[local collector auto]
 beamline = hve
-host = 172.18.20.10
-port = 99999
+host =
+port =
 use_resolution_threshold = True
-json_input_params = /home/aleceh/Programs/mx_suite/src/mx/online/biomax_hve_mpi_pipeline/eigerStream_dozor/collector_output/collector_conf.json
+json_input_params = ~/Workspace/collector_output/collector_conf.json
+
+[local pipeline auto]
+beamline = hve
+host =
+port =
+use_resolution_threshold = True
+json_input_params = ~/Workspace/pipeline_config.dat
+
 
 [hve on purple (resolution)]
 beamline = hve
